Use uv requirements instead of duplicate them in docker file

--- a/speed_champion/Dockerfile
+++ b/speed_champion/Dockerfile
@@ -11,32 +11,32 @@ RUN apt-get update && apt-get install -y \
     python3-dev \
     musl-dev \
     libpq-dev \
+    curl \
     && rm -rf /var/lib/apt/lists/*
+
+# Install uv
+RUN curl -LsSf https://astral.sh/uv/install.sh | sh
+ENV PATH="/root/.cargo/bin:$PATH"
 
 # Set work directory
 WORKDIR /app
 
-# Copy Django project
-COPY . .
+# Copy dependency files
+COPY pyproject.toml uv.lock ./
 
-# Install Python dependencies
-RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir \
-    django>=6.0.1 \
-    djangorestframework>=3.16.1 \
-    python-dotenv>=1.0.0 \
-    pillow>=11.1.0 \
-    requests>=2.32.3 \
-    django-cors-headers>=4.9.0 \
-    pillow-heif>=1.1.1 \
-    psycopg[binary]>=3.1.0 \
-    gunicorn>=21.2.0
+# Install Python dependencies using uv
+RUN uv pip install --system -r pyproject.toml && \
+    uv pip install --system psycopg[binary] gunicorn
+
+# Copy Django project
+COPY speed_champion ./speed_champion
 
 # Collect static files
+WORKDIR /app/speed_champion
 RUN DJANGO_ENV=production python manage.py collectstatic --noinput --clear || true
 
 # Expose port
 EXPOSE 8000
 
 # Run gunicorn
-CMD ["gunicorn", "--bind", "0.0.0.0:8000", "--workers", "2", "--threads", "4", "--timeout", "120", "speed_champion.wsgi:application"]
+CMD ["gunicorn", "--bind", "0.0.0.0:8000", "--workers", "2", "--threads", "2", "--timeout", "120", "speed_champion.wsgi:application"]
