--- a/speed_champion/docker-compose.yml
+++ b/speed_champion/docker-compose.yml
@@ -17,7 +17,9 @@ services:
       retries: 5
 
   web:
-    build: .
+    build:
+      context: ..
+      dockerfile: speed_champion/Dockerfile
     command: >
       sh -c "python manage.py migrate &&
              gunicorn --bind 0.0.0.0:8000 --workers 2 --threads 2 --timeout 120 speed_champion.wsgi:application"
