use requirements.txt file

--- a/speed_champion/Dockerfile
+++ b/speed_champion/Dockerfile
@@ -11,22 +11,17 @@ RUN apt-get update && apt-get install -y \
     python3-dev \
     musl-dev \
     libpq-dev \
-    curl \
     && rm -rf /var/lib/apt/lists/*
-
-# Install uv
-RUN curl -LsSf https://astral.sh/uv/install.sh | sh
-ENV PATH="/root/.cargo/bin:$PATH"
 
 # Set work directory
 WORKDIR /app
 
-# Copy dependency files
-COPY pyproject.toml uv.lock ./
+# Copy requirements file
+COPY requirements.txt .
 
-# Install Python dependencies using uv
-RUN uv pip install --system -r pyproject.toml && \
-    uv pip install --system psycopg[binary] gunicorn
+# Install Python dependencies
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
 
 # Copy Django project
 COPY speed_champion ./speed_champion
