--- a/speed_champion/docker-compose.yml
+++ b/speed_champion/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_HOST=db
       - DB_PORT=5432
+      - MISTRAL_API_KEY=${MISTRAL_API_KEY}
     depends_on:
       db:
         condition: service_healthy
